--- a/education.html
+++ b/education.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Education Page</title>
+	<title>Education & </title>
 </head>
 
 <body>
+	<header>
+        <nav id=option>
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="workhistory.html">Work History</a></li>
+                <li><a href="education.html">Education History</a></li>
+				<li><a href="video.html">Video</a></li>
+            </ul>
+        </nav>
+	</header>
 	<h1>My Education History</h1>
-	<ul>
-		<li>MSEE IIT</li>
-		<li>BSEE IIT</li>
-	</ul>
+	<section id="educate">
+		<h2>Education</h2>
+		<ol>
+			<li>High School</li>
+			<li>Bachelor of Science in Electrical Engineering</li>
+			<li>Master of Science in Electrical Engineering with emphasis on Telecom</li>
+		</ol>
+		<h2>Professional Certificates</h2>
+		<ol>
+			<li>Web Design and Application Programming (expected fall 2017)</li>
+		</ol>
+    </section>
+	
+	<footer>
+        <p> Auhor: Luno Khuon</p>
+        <address>
+            <p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
+        </address>
+    </footer>
 </body>
 </html>
 
