--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>My First HTML5 Webpage</title>
 </head>
 
 <body>
-	<h1>My Resume</h1>
-	<a href="workhistory.html">Click to go to my work history page</a>
-	<br>
-	<a href="education.html">Click to go to my education history page</a>	   
+	<header>
+        <nav id="option">
+			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico"alt="iit logo">
+			<ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="workhistory.html">Work History</a></li>
+                <li><a href="education.html">Education History</a></li>
+				<li><a href="video.html">Video</a></li>
+            </ul>
+        </nav>
+    </header>
+	
+	<h1>Welcome to my first website!</h1>	
+	<section id="info">
+		<h2>Introduction</h2>
+		<p>My name is Luno Khuon and I live in the south west suburb of Chicago. The follwing 
+		   email address lkhuon1@hawk.iit.edu is my contact information. Please choose the selection
+		   from the above menu for furher detail about me. Thank you!</p>
+	</section>
+	
+	<footer>
+        <p> Auhor: Luno Khuon</p>
+        <address>
+            <p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
+        </address>
+    </footer>   
+	
 </body>
 </html>
 
