final product after validated and bug fixes

--- a/workhistory.html
+++ b/workhistory.html
@@ -7,16 +7,16 @@
 
 <body>
 	<header>
-        <nav id="option">
-			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico"alt="iit logo">
+		<nav id="option">
+			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico" alt="iit logo">
 			<ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="workhistory.html">Work History</a></li>
-                <li><a href="education.html">Education History</a></li>
+				<li><a href="index.html">Homepage</a></li>
+				<li><a href="workhistory.html">Work History</a></li>
+				<li><a href="education.html">Education History</a></li>
 				<li><a href="video.html">Video</a></li>
-            </ul>
-        </nav>
-    </header>
+			</ul>
+		</nav>
+	</header>
 	
 	<h1>My Work History</h1>
 	<section id="HCL">
@@ -33,7 +33,7 @@
 			<li>Interaction with external vendors</li>
 			<li>Worked with developers on field issues</li>
 		</ol>
-    </section>
+	</section>
 	
 	<section id="ALU">
 		<h2>Alcatel Lucent (2006 - 2014)</h2>
@@ -59,7 +59,7 @@
 			<li>Developed several Short Message Service (SMS) fast features</li>
 			<li>Feature Engineer - coordinated testing effort for internation customer</li>
 			<li>Provided bug fixes for E911 field issues</li>
-			<li>Developed Mobile Position Center Simulator tool for development testing
+			<li>Developed Mobile Position Center Simulator tool for development testing</li>
 		</ol>
 		<h3>MSC Features Developer</h3>
 		<ol>
@@ -80,12 +80,10 @@
 	</section>
 		
 	<footer>
-        <p> Auhor: Luno Khuon</p>
-        <address>
-            <p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
-        </address>
-    </footer>
+		<p> Auhor: Luno Khuon</p>
+		<address>
+			<p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
+		</address>
+	</footer>
 </body>
 </html>
-
-	
