--- a/education.html
+++ b/education.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Education & </title>
+	<title>Education</title>
 </head>
-
 <body>
 	<header>
-        <nav id=option>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="workhistory.html">Work History</a></li>
-                <li><a href="education.html">Education History</a></li>
+		<nav id="option">
+			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico" alt="iit logo">
+			<ul>
+				<li><a href="index.html">Homepage</a></li>
+				<li><a href="workhistory.html">Work History</a></li>
+				<li><a href="education.html">Education History</a></li>
 				<li><a href="video.html">Video</a></li>
-            </ul>
-        </nav>
+			</ul>
+		</nav>
 	</header>
 	<h1>My Education History</h1>
 	<section id="educate">
@@ -28,14 +28,14 @@
 		<ol>
 			<li>Web Design and Application Programming (expected fall 2017)</li>
 		</ol>
-    </section>
+	</section>
 	
 	<footer>
-        <p> Auhor: Luno Khuon</p>
-        <address>
-            <p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
-        </address>
-    </footer>
+		<p> Auhor: Luno Khuon</p>
+		<address>
+			<p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
+		</address>
+	</footer>
 </body>
 </html>
 
