--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 	<meta charset="UTF-8">
 	<title>My First HTML5 Webpage</title>
 </head>
-
 <body>
 	<header>
-        <nav id="option">
-			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico"alt="iit logo">
+		<nav id="option">
+			<img src="http://web.iit.edu/sites/web/themes/iit_web/favicon.ico" alt="iit logo">
 			<ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="workhistory.html">Work History</a></li>
-                <li><a href="education.html">Education History</a></li>
+				<li><a href="index.html">Homepage</a></li>
+				<li><a href="workhistory.html">Work History</a></li>
+				<li><a href="education.html">Education History</a></li>
 				<li><a href="video.html">Video</a></li>
-            </ul>
-        </nav>
-    </header>
-	
+			</ul>
+		</nav>
+	</header>
 	<h1>Welcome to my first website!</h1>	
-	<section id="info">
+	<section id="intro">
 		<h2>Introduction</h2>
 		<p>My name is Luno Khuon and I live in the south west suburb of Chicago. The follwing 
 		   email address lkhuon1@hawk.iit.edu is my contact information. Please choose the selection
@@ -27,12 +25,11 @@
 	</section>
 	
 	<footer>
-        <p> Auhor: Luno Khuon</p>
-        <address>
-            <p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
-        </address>
-    </footer>   
-	
+		<p> Auhor: Luno Khuon</p>
+		<address>
+			<p><a href="mailto:lkhuon1@hawk.iit.edu">lkhuon1@hawk.iit.edu</a></p>
+		</address>
+	</footer>   
 </body>
 </html>
 
